@@ -19,4 +19,6 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
 
 import logging
+logging.basicConfig()
+
 logging_level = logging.DEBUG
